kubernetes/infrastructure/vault/httproute-vault.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
  namespace: vault
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
  - name: cloudflare-tunnel
    namespace: cloudflare-tunnel-system
    sectionName: https
  hostnames:
  - vault.alialjaffer.com
  rules:
  - backendRefs:
    - name: vault
      port: 8200
